src/objects/StrategicPartner__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LandingPage__c</fullName>
        <label>LandingPage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <label>Referral ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Agency__c</fullName>
        <description>SBD Agency</description>
        <inlineHelpText>SBD Agency</inlineHelpText>
        <label>SBD Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Partner__c</fullName>
        <label>Strategic Partner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Strategic Partner</label>
</CustomObject>